# dkan-importer

./: .gitignore  Cargo.toml  README.md
dkan-importer/: Cargo.toml  README.md
dkan-importer/src/model/: data_dictionary.rs  mod.rs
dkan-importer/tests/: data_dictionary_asterisk_required_fields_test.rs  data_dictionary_basic_functionality_test.rs  data_dictionary_normalization_optimization_test.rs  data_dictionary_schema_conversion_test.rs
dkan-importer/tests/common/: mod.rs
importer-lib/: .gitignore  Cargo.toml
importer-lib/src/: excel_validator.rs  lib.rs  test_utils.rs
importer-lib/src/utils/: datetime.rs  filesystem.rs  mod.rs  string.rs
importer-lib/tests/: excel_validator_asterisk_test.rs  excel_validator_null_validation_test.rs  excel_validator_string_null_validation_test.rs  regression_scenarios_test.rs  utils_normalize_string_test.rs
importer-lib/tests/common/: mod.rs
src/: lib.rs  main.rs  utils.rs
src/model/: data_dictionary.rs  excel_validator.rs  mod.rs
tests/: data_dictionary_asterisk_in_name_or_title_tests.rs  data_dictionary_asterisk_required_fields_test.rs  data_dictionary_basic_functionality_test.rs  data_dictionary_constructor_duplicate_checking_test.rs  data_dictionary_duplicate_detection_test.rs  data_dictionary_integration_test.rs  data_dictionary_normalization_optimization_test.rs  data_dictionary_schema_conversion_test.rs  date_parsing.rs  dkan_schema_tests.rs  excel_validator_duplicate_detection_test.rs  excel_validator_error_messages_test.rs  excel_validator_general_validation_test.rs  excel_validator_header_normalization_test.rs  excel_validator_null_validation_test.rs  excel_validator_number_to_string_conversion_test.rs  excel_validator_string_null_validation_test.rs  expecting_integer_getting_string_value_error_mesage_test.rs  null_validation_tests.rs  parsing_date_parsing_test.rs  regression_scenarios_test.rs  regression_test.rs  string_null_validation_tests.rs  type_coercion_tests.rs  utils_normalize_string_test.proptest-regressions  utils_normalize_string_test.rs
tests/common/: mod.rs
