[package]
name = "dkan-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
jsonschema = "0.33"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"]}
rpassword = "7.4"
csv = "1.3"

# Excel reader
calamine = "0.31"

[dev-dependencies]
proptest = "1.8"
