[package]
name = "dkan-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"

# Common lib
importer-lib = { path = "../importer-lib" }



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false    # Disable integer overflow checks (use carefully!)

[profile.release.package."*"]
opt-level = 3
