[package]
name = "dkan-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"]}
rpassword = "7.4"

# Common lib
importer-lib = { path = "../importer-lib" }


