[package]
name = "importer-lib"
version = "0.1.0"
edition = "2024"

[features]
# Feature flag for test utilities (automatically enabled during testing)
test = []

[dependencies]
# Excel reader
calamine = "0.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
csv = "1.3"
jsonschema = "0.33"


[dev-dependencies]
proptest = "1.8"

# Automatically enable test feature during testing
# This ensures test_utils is only compiled when running tests
[dev-dependencies.importer-lib]
path = "."
features = ["test"]
